--- a/Checker.html
+++ b/Checker.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Enhanced VEX IQ Rapid Relay Score Viewer</title>
+  <title>VEX IQ Rapid Relay Score Viewer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
