--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
 
     <!-- Content Container -->
 <div class="content-container">
-    <iframe id="home-frame" class="content-frame active" src="https://lavadeg31.github.io/Vex_Iq/README.md"></iframe>
+    <iframe id="home-frame" class="content-frame active" src="https://lavadeg31.github.io/Vex_Iq/"></iframe>
     <iframe id="calculator-frame" class="content-frame" src="https://lavadeg31.github.io/Vex_Iq/Calculator"></iframe>
     <iframe id="checker-frame" class="content-frame" src="https://lavadeg31.github.io/Vex_Iq/Checker"></iframe>
     <iframe id="rules-frame" class="content-frame" src="https://lavadeg31.github.io/Vex_Iq/Rules.html"></iframe>
