--- a/policy.html
+++ b/policy.html
@@ -40,7 +40,7 @@
     </p>
     <h2>Contact Us</h2>
     <p>
-        If you have any questions or concerns about this privacy policy, please contact us at [vandegriendlars@gmail.com].
+        If you have any questions or concerns about this privacy policy, please contact us at vandegriendlars@gmail.com.
     </p>
 </body>
 </html>
